<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="placeholder_search">Cari kopi pilihanmu!</string>
    <string name="category_all">All</string>
    <string name="category_americano">Americano</string>
    <string name="category_cappuccino">Cappuccino</string>
    <string name="category_espresso">Espresso</string>
    <string name="category_frappe">Frappe</string>
    <string name="category_latte">Latte</string>
    <string name="category_macchiato">Macchiato</string>
    <string name="category_mocha">Mocha</string>
    <string name="section_category">Mau ngopi apa hari ini?</string>
    <string name="section_favorite_menu">Menu Favorit</string>
    <string name="section_best_seller_menu">Menu Terlaris</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>

    <string name="stateful_converter">Stateful Converter</string>
    <string name="stateless_converter">Stateless Converter</string>
    <string name="two_way_converter">Two Way Converter</string>
    <string name="enter_celsius">Enter temperature in Celsius</string>
    <string name="temperature_fahrenheit">Temperature in Fahrenheit : %s</string>
    <string name="enter_temperature">Enter temperature in %s</string>

    <string name="hello_world">Hello World</string>
    <string name="menu">Menu</string>
    <string name="hello_from_nav_drawer">Hello From Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="coming_soon">%s Menu is Coming Soon!</string>
    <string name="subscribe_question">Subscribe?</string>
    <string name="subscribed_info">Subscribed. You will informed when the feature is ready</string>

    <string name="scroll_to_top">Scroll to Top</string>
    <string name="search_hero">Cari pahlawanmu</string>

    <string name="enter_length">Masukkan panjang</string>
    <string name="enter_width">Masukkan lebar</string>
    <string name="count">Hitung!</string>
    <string name="result">Hasil: %s</string>
</resources>